--- a/amd/css/styles.css
+++ b/amd/css/styles.css
@@ -5,7 +5,14 @@
     border-radius:25px;
     margin-bottom: 3%;
 }
-
+div#container{
+    margin: 0 auto;
+}
+div#container_flags_field_users {
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 3%;
+}
 .flag-container{
     display: contents;
 }
@@ -15,7 +22,7 @@
     display: flex;
     justify-content: space-around;
     margin-top: 10px;
-
+    flex-direction: column;
 }
 
 img#img_flag{
